feat: починил некоторые ошибки
