# app/lib/api.schema.ts
@@ -282,7 +282,8 @@ export interface paths {
         get: operations["get_participant_api_participants__participant_id__get"];
         put?: never;
         post?: never;
-        delete?: never;
+        /** Удалить участника турнира */
+        delete: operations["delete_participant_api_participants__participant_id__delete"];
         options?: never;
         head?: never;
         /**
@@ -1751,6 +1752,35 @@ export interface operations {
                 content: {
                     "application/json": components["schemas"]["ParticipantRead"];
                 };
+            };
+            /** @description Validation Error */
+            422: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": components["schemas"]["HTTPValidationError"];
+                };
+            };
+        };
+    };
+    delete_participant_api_participants__participant_id__delete: {
+        parameters: {
+            query?: never;
+            header?: never;
+            path: {
+                participant_id: number;
+            };
+            cookie?: never;
+        };
+        requestBody?: never;
+        responses: {
+            /** @description Successful Response */
+            204: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content?: never;
             };
             /** @description Validation Error */
             422: {
